--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://cdb-ekhf1dds.bj.tencentcdb.com:10192/mini_server?serverTimezone=UTC&useUnicoding=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://cdb-ekhf1dds.bj.tencentcdb.com:10192/mini_server?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: cai1348870256
 
